modified:   index.html modified:   sandbox.js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 <body>
     <h1 id="page-title">The DOM</h1>
+
+    <h2>Todos</h2>
+
+    <button class="prepend">add new todo</button>
+
+    <ul>
+        <li>buy bread</li>
+        <li>pay bills</li>
+    </ul>
+
+    <button class="append">add new todo</button>
     
-    <div>
+    <!-- <div>
         <p>hello, world</p>
         <p>Lorem ipsum dolor sit amet.</p>
         <p class="error">this is an error message</p>
@@ -29,7 +40,7 @@
         <p>success</p>
         <p>aasdf</p>
         <p>asdfsdferror</p>
-    </div>
+    </div> -->
 
     <script src="sandbox.js"></script>
 </body>
