--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="" class="submit-form">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username">
+        <br>
+        <label for="passport-number">Passport number</label>
+        <input type="text" name="passport-number" id="passport-number">
+        <br>
+        <input type="submit" value="submit">
+    </form>
     
     <script src="sandbox.js"></script>
 </body>
